--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "erfan mirhoseini",
-  "license": "FaceBook"
+  "license": "FaceBook",
+  "devDependencies": {
+    "tailwindcss": "^3.4.0"
+  }
 }
